; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_kpc.c_kpc_get_bigarray.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_kpc.c_kpc_get_bigarray.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kpc_get_bigarray.bigarray = internal global i32* null, align 8
@sysctl_lock = common dso_local global i32 0, align 4
@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@VM_KERN_MEMORY_DIAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64*)* @kpc_get_bigarray to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @kpc_get_bigarray(i64* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64*, align 8
  %4 = alloca i64, align 8
  store i64* %0, i64** %3, align 8
  %5 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %6 = call i32 @LCK_MTX_ASSERT(i32* @sysctl_lock, i32 %5)
  %7 = call i64 (...) @kpc_get_counterbuf_size()
  %8 = add i64 %7, 4
  store i64 %8, i64* %4, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64*, i64** %3, align 8
  store i64 %9, i64* %10, align 8
  %11 = load i32*, i32** @kpc_get_bigarray.bigarray, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32*, i32** @kpc_get_bigarray.bigarray, align 8
  store i32* %14, i32** %2, align 8
  br label %24

15:                                               ; preds = %1
  %16 = load i64, i64* %4, align 8
  %17 = load i32, i32* @VM_KERN_MEMORY_DIAG, align 4
  %18 = call i32* @kalloc_tag(i64 %16, i32 %17)
  store i32* %18, i32** @kpc_get_bigarray.bigarray, align 8
  %19 = load i32*, i32** @kpc_get_bigarray.bigarray, align 8
  %20 = icmp ne i32* %19, null
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert(i32 %21)
  %23 = load i32*, i32** @kpc_get_bigarray.bigarray, align 8
  store i32* %23, i32** %2, align 8
  br label %24

24:                                               ; preds = %15, %13
  %25 = load i32*, i32** %2, align 8
  ret i32* %25
}

declare dso_local i32 @LCK_MTX_ASSERT(i32*, i32) #1

declare dso_local i64 @kpc_get_counterbuf_size(...) #1

declare dso_local i32* @kalloc_tag(i64, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
